# cu_sawyer_demo

./: CMakeLists.txt  package.xml  requirements.txt
notebooks/: cube-arrangement.ipynb  yunet.ipynb
scripts/: face_detection
