<?xml version="1.0"?>
<package format="2">
  <name>cu_sawyer_demo</name>
  <version>0.0.0</version>
  <description>The cu_sawyer_demo package</description>

  <maintainer email="migoerner@constructor.university">Michael Goerner</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_commander</depend>
  <depend>rospy</depend>
</package>
